# grovec_sv_solution

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
airflow/: airflow.cfg  airflow.db  unittests.cfg
airflow/dags/: neo_data_ingestion_dag.py
data_generated/output/: neo_hazardous_result.parquet
data_generated/raw_ingest/data/neo_parquet/: _common_metadata  _metadata
data_generated/raw_ingest/data/neo_parquet/created_at=2021-04-01/: part.0.parquet
data_generated/raw_ingest/data/neo_parquet/created_at=2021-04-02/: part.0.parquet
data_generated/raw_ingest/data/neo_parquet/created_at=2021-04-03/: part.0.parquet
data_generated/raw_ingest/data/neo_parquet/created_at=2021-04-04/: part.0.parquet
data_generated/raw_ingest/data/neo_parquet/created_at=2021-04-05/: part.0.parquet
data_generated/raw_ingest/data/neo_parquet/created_at=2021-04-06/: part.0.parquet
docs/: conf.py  index.rst  installation.rst  usage.rst
grovec_sv_solution/: __init__.py  cli.py  grovec_sv_solution.py  neo_data_ingestion_dag.py
notebook/: neo_data_querying.ipynb
tests/: __init__.py  test_grovec_sv_solution.py
