[tool]
[tool.poetry]
name = "grovec_sv_solution"
version = "0.1.5"
homepage = "https://github.com/sugix/grovec_sv_solution"
description = "Top-level package for GroveC-SV-Solution."
authors = ["Sugi Venugeethan <sugi205@gmail.com>"]
readme = "README.rst"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "grovec_sv_solution" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
click = "*"
duckdb = "^0.2.5"
dask = {version = "*",extras = ["complete"]}
apache-airflow = "^2.0.1"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]
grovec_sv_solution = 'grovec_sv_solution.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
