[tool]
[tool.poetry]
name = "grovec_sv_solution"
version = "0.1.17"
homepage = "https://github.com/sugix/grovec_sv_solution"
description = "Top-level package for GroveC-SV-Solution."
authors = ["Sugi Venugeethan <sugi205@gmail.com>"]
readme = "README.rst"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "grovec_sv_solution" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
click = "*"
duckdb = "^0.2.5"
dask = {version = "*",extras = ["complete"]}
ipykernel = "^5.5.3"
aiohttp = "^3.7.4"
requests = "^2.25.1"
fastparquet = "^0.5.0"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]
grovec_sv_solution = 'grovec_sv_solution.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
